Библиотека momentjs заменена на аналогичную с поддержкой разных языков, чтобы нормально парсить название месяца в NAD

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 		<script src="libs/jquery-ui-1.12.1/jquery-ui.js"></script>
 		<script src="libs/jquery-ui-timepicker/jquery-ui-timepicker-addon.js"></script>
 		<script src="libs/underscore.js/underscore-min.js"></script>
-		<script src="libs/moment.js/moment.min.js"></script>
+		<script src="libs/moment.js/moment-with-locales.js"></script>
 		<script src="libs/d3.js/d3.v4.min.js"></script>
 
 		<script src="update.popup.js"></script>
