Кнопки для сохранения JSON нормализованного события в буфер обмена и в файл

--- a/options.html
+++ b/options.html
@@ -31,6 +31,12 @@
 <br/>
 <br/>
 <br/>
+<div>
+  <input type="checkbox" id="dont_show_save_event_icons" name="dont_show_save_event_icons">
+  <label for="dont_show_save_event_icons">Не показывать кнопки сохранения JSON события 📋 💾 🖫</label>
+</div>
+<br/>
+<br/>
 <br/>
 <b>Сервисы для получения информации по IP-адресам:</b>
 <br/>
