--- a/options.html
+++ b/options.html
@@ -36,6 +36,11 @@
   <label for="dont_show_save_event_icons">Не показывать кнопки сохранения JSON события 📋 💾 🖫</label>
 </div>
 <br/>
+<div>
+  <input type="checkbox" id="disable_agg_sort" name="disable_agg_sort">
+  <label for="disable_agg_sort">Отключить новое поведение сортировки при аггрегации (R25.1 и выше)</label>
+</div>
+<br/>
 <br/>
 <br/>
 <b>Сервисы для получения информации по IP-адресам:</b>
