--- a/popup.html
+++ b/popup.html
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div id="tabs-1">
-				<div class="usefullfiltersdiv" >Полезные фиьтры
+				<div class="usefullfiltersdiv" >Полезные фильтры
 					<div class="usefullfilters"  id="filters"></div>
 				</div>
 			</div>
