--- a/options.html
+++ b/options.html
@@ -63,7 +63,7 @@
 <b>Сервисы для получения информации по хешам:</b>
 <br/>
 <div class="hashlinks_container" id="hashlinks_container">
-  При добавлении дополнительных сервисов по проверке хешей в качестве шаблона для подстановки IP-адреса следует 
+  При добавлении дополнительных сервисов по проверке хешей в качестве шаблона для подстановки хеша следует 
    использовать последовательность ${hash}.
    <br/>
    Пример: <b>https://your-favorite-hash-check-service.net/api/path/${hash}/info</b>
