add desc and link corr rules

--- a/options.html
+++ b/options.html
@@ -37,6 +37,11 @@
 </div>
 <br/>
 <div>
+  <input type="checkbox" id="dont_show_desc_rules" name="dont_show_desc_rules">
+  <label for="dont_show_desc_rules">Не показывать описание и ссылку на правило корреляции в Knowledge Base</label>
+</div>
+<br/>
+<div>
   <input type="checkbox" id="disable_agg_sort" name="disable_agg_sort">
   <label for="disable_agg_sort">Отключить новое поведение сортировки при аггрегации (R25.1 и выше)</label>
 </div>
