--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,7 @@
 		<script src="processTree.popup.js"></script>
 		<script src="popup.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="libs/jquery-ui-1.12.1/jquery-ui.min.css">
+		<link rel="stylesheet" type="text/css" href="libs/jquery-ui-1.12.1/jquery-ui.min.monkey.css">
 		<link rel="stylesheet" type="text/css" href="libs/jquery-ui-timepicker/jquery-ui-timepicker-addon.css">
 		<link rel="stylesheet" type="text/css" href="popup.css">
 		<style>
